users can only delete and edit their own data

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
- background-image: url('https://th.bing.com/th/id/R.84032fded07e6811e2fb54667426e4d4?rik=ayC%2bOBAUioVevw&riu=http%3a%2f%2fblog.lipmanhomesandestates.com%2fwp-content%2fuploads%2f2014%2f01%2fnashville-runrise-mike-hicks.jpg&ehk=HqjRUYtr5lFmJdkKqT3lWZgDfweGuYEzclGg%2b%2fjJKNI%3d&risl=&pid=ImgRaw&r=0');
- background-size: cover;
+  /* background-image: url('https://images.pexels.com/photos/129731/pexels-photo-129731.jpeg?auto=compress&cs=tinysrgb&w=400');
+  background-size: cover; */
+
 }
 
 .App-logo {
