--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,8 @@
 .App {
   text-align: center;
   font-family: 'Bruno Ace SC', cursive;
-  /* background-image: url('https://images.pexels.com/photos/129731/pexels-photo-129731.jpeg?auto=compress&cs=tinysrgb&w=400');
+  /* background-image: url('https://plus.unsplash.com/premium_photo-1670176447319-c5622f2fb996?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
   background-size: cover; */
-
 }
 
 .App-logo {
