--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,16 +3,21 @@
 .App {
   text-align: center;
   font-family: 'Bruno Ace SC', cursive;
-  /* background-image: url('https://plus.unsplash.com/premium_photo-1670176447319-c5622f2fb996?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80'); */
-  background-size: cover;
-  height: 100%;
-  background-repeat: repeat-x;
+  /* background-image: url('https://plus.unsplash.com/premium_photo-1670176447319-c5622f2fb996?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');  */
+  /* background-color: rgba(255, 248, 220, 1); */
+  background-color:rgba(242, 243, 244, 1);
+  /* background-size: cover; */
+  /* height: 100%; */
+  /* background-repeat: repeat-x; */
+  width: 100vw;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -31,6 +36,10 @@
   color: white;
 }
 
+body {
+  background-color: rgba(242, 243, 244, 1)
+};
+
 .App-link {
   color: #61dafb;
 }
@@ -44,10 +53,28 @@
   }
 }
 
+/* .h-100vh-4rem {
+   height: calc(100vh - 4rem); 
+  height: 100%;
+}*/
 
-.h-100vh-4rem {
-  height: calc(100vh - 4rem);
+/* html, body, #app, #app>div {
+  background-color: rgb(255, 250, 205);
+  height: 100%
+} */
+
+/* html {
+  overflow: scroll;
+} */
+
+
+
+html, 
+body, 
+#background { 
+  width: 100vw;
+  min-height: 100vh;
+  background-color: rgba(242, 243, 244, 1);
 }
-
 
 
